# pepino

./: .travis.yml  LICENSE  README.md  pepino.cabal  pepino.sublime-project
core/src/: Draft.hs  Pepino.hs
core/src/Pepino/Renderers/: Ansi.hs
core/tests/: Draft.hs
examples/: .ghci  Account.hs  AccountSpec.hs  Arithmetic.hs  ArithmeticSpec.hs  README.md  Spec.hs  Specs.hs  examples.cabal
examples/Account/: TransactionsFeature.hs  TransferFeature.hs  TransfersFeature.hs
