name:                 examples
version:              0.0.0.0
synopsis:             Examples of descriptive tests
category:             Testing
build-type:           Simple
cabal-version:        >= 1.10

library
  default-language:   Haskell2010

test-suite test
  default-language:   Haskell2010
  main-is:            Specs.hs
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  default-extensions:
    GADTs,
    StandaloneDeriving
  hs-source-dirs:     .
  build-depends:
    base     >= 4.5 && <5,
    hspec    >= 1.6,
    hunit-rematch >= 0.1,
    HUnit    >= 1.2,
    rematch  >= 0.2
